[gd_scene load_steps=6 format=2]

[ext_resource path="res://OLED.gd" type="Script" id=1]
[ext_resource path="res://on_off_oled.tres" type="TileSet" id=2]
[ext_resource path="res://ClearButton.gd" type="Script" id=3]
[ext_resource path="res://DrawSineButton.gd" type="Script" id=4]
[ext_resource path="res://DrawFreqResponseButton.gd" type="Script" id=5]

[node name="TileMapOLED" type="TileMap"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 10, 10 )
format = 1
script = ExtResource( 1 )

[node name="ClearButton" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawSineButton" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawFreqResponseButton" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="pressed" from="DrawSineButton" to="." method="_on_DrawSineButton_pressed"]
[connection signal="pressed" from="DrawFreqResponseButton" to="." method="_on_DrawFreqResponseButton_pressed"]
